fix date to not show datepicker on mobile / fix whatsapp button position on mobile

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -192,4 +192,9 @@ a:link {
 ._1bpcM {
   color:white !important;
   background-color: rgb(79, 206, 93) !important;
+  position: fixed !important;
+}
+
+._2iWL7 {
+  position: fixed !important;
 }
